2001-07-12  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-xml-util.c: gray out the call to xmlIOParseDTD until we can
	use libxml2

2001-07-09  Akira TAGOH <tagoh@gnome-db.org>

	* gda-xml-util.c: fixed typo.

2001-07-08  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-xml-query/*: moved some files into the libgda-common directory
	itself, with some changes:
		- XmlQueryItem is now GdaXmlItem
		- XmlQueryBin is now GdaXmlBinItem
		- XmlQueryList is now GdaXmlListItem
		- XmlQueryAtom is now GdaXmlAtomItem
		- XmlQueryColumn is now GdaXqlColumn

	* gda-xql.h: new file

2001-07-07  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-listener.[ch]: implementation of the GDA::Listener CORBA
	interface, used by clients to receive notifications from providers

	* gda-quark-list.[ch]: new file for managing connection strings and
	similar value/pair lists

2001-07-06  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-xml-file.[ch]: moved to gda-xml-document.[ch]

	* gda-xml-util.[ch]: new file containing several XML ulitity
	functions

2001-07-05  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-error.[ch]: moved here from the libgda-client library

2001-07-04  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-config.h: GDA_CONFIG_SECTION_LAST_CONNECTIONS moved from
	GNOME-DB, since the last successful connections will be saved
	at the libgda level

	* gda-config.c (gda_config_save_last_connection): new function

2001-06-26  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-config.c (gda_provider_list): CORBA_free the list returned
	by oaf_query

2001-06-13  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-util.c (gda_util_hash_to_list): added new function for converting
	a GHashTable into a GList (only adding, to the GList, the GHashTable's
	keys)

2001-06-01  Rodrigo Moya <rodrigo@gnome-db.org>

	* Makefile.am: don't build the libxmlquery until we fix the
	libxml1/libxml2/libxslt issue

2001-05-22  Rodrigo Moya <rodrigo@gnome-db.org>

	* reverted last change, thus forcing new versions of