@@ -1,3 +1,8 @@
+2001-07-13  Rodrigo Moya <rodrigo@gnome-db.org>
+
+	* gda-xql-const.[ch], gda-xql-dml.[ch]
+	more conversion of the XML queries library
+
 2001-07-12  Rodrigo Moya <rodrigo@gnome-db.org>
 
 	* gda-xml-util.c: gray out the call to xmlIOParseDTD until we can
